...
                    <rect key="frame" x="109" y="145" width="103" height="32"/>
                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                    <state key="normal" title="Call To Action">
                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="ANNativeAdViewCallToAction"/>
                    </userDefinedRuntimeAttributes>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="aZg-z5-UEO" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" constant="7" id="1Mt-bw-Mpw"/>
...
